# rakuten-occasion-ai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bentofile.yaml  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  ghcr.yml
docs/: PROJECT.md  exigences_coverage.md  exigences_fonctionnelles.md
documentation/: 00_vue_ensemble.md  01_data_engineering.md  02_embeddings.md  03_classification_benchmark.md  04_retrieval.md  05_vlm_llm_grounded.md  06_pricing.md  07_mlflow_suivi.md  08_registry_champion_challenger.md  09_airflow_retrain.md  10_drift_evidently.md  11_observabilite.md  12_infra.md  13_cicd_securite.md  14_api_orchestration.md  15_frontend_ux.md  16_explainability.md  17_etude_chaine_valeur_photo.md  GLOSSAIRE.md  PROJECT.md  README.md  exigences_coverage.md  exigences_fonctionnelles.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.ts  batch.ts  condition.ts  facets.ts  index.css
frontend/src/components/: BatchMode.tsx  CandidatePicker.tsx  ConditionChecklist.tsx  ListingCard.tsx  LoginPage.tsx  MarketplaceListing.tsx  PhotoLightbox.tsx  PhotoUploader.tsx  PriceCard.tsx  StepBar.tsx
infra/airflow/: README.md
infra/airflow/dags/: rakuten_drift_check_dag.py  rakuten_retrain_dag.py
infra/compose/: docker-compose.airflow.yml
infra/docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.frontend  Dockerfile.mlflow  README.md  nginx.conf
infra/k8s/: 00-namespace.yaml  01-configmap.yaml  02-secrets.example.yaml  10-minio.yaml  20-postgres-mlflow.yaml  30-mlflow-server.yaml  40-api.yaml  50-frontend.yaml  60-ingress.yaml  README.md  kind-cluster.yaml  kustomization.yaml
monitoring/grafana/dashboards/: evidently_drift.json  golden_signals.json  mlops_promote_gate.json
monitoring/prometheus/: prometheus.yml
notebooks/: 00_meta_exploration.ipynb  01_audit_exploratoire.ipynb  03_embeddings_concept.ipynb  04_retrieval_exploratoire.ipynb
reports/: dataset_meta_inventory.json
reports/01_audit/: audit_v1_amazon_reviews_2023.md  dataset_meta_inventory.json
reports/02_cleaning/: anti_leakage_check.md  cleaning_report.md  pandera_validation.json  pandera_validation.md
reports/03_embeddings/: embeddings_concept.md
reports/04_classifiers_bench/: bench_v1.json  bench_v1.md  m1_knn_v1.json  m2_svm_v1.json  m4_mlp_v1.json  m5_tfidf_linsvc_v1.json  m6_fusion_v1.json
reports/05_retrieval/: akinator_backend_eval.json  catalog_sample_100.csv  catalog_sample_100.md  extractor_comparison.json  extractor_comparison.md  extractor_comparison_raw.jsonl  faiss_bench.json  faiss_bench.md  listing_quality_raw.jsonl  listing_quality_report.json  listing_quality_report.md  multiview_rrf_eval.json  ood_calibration.json  photo_richness_bench.json  photo_richness_bench.md  taxonomy_bench.json  taxonomy_bench.md
reports/07_rag_eval/: rag_grounded_eval.json
reports/08_pricing/: pricing_v1.json
reports/09_explainability/model_cards/: arctic_v1.md  e1_siglip_base_v1.md  e2_arctic_embed_l_v2.md  e3_vlm_zero_shot_v1.md  e4_llm_writer_v1.md  faiss-hnsw_v1.md  fusion_v1.md  knn-faiss_v1.md  llm-writer_v1.md  m1_knn_v1.md  (+14 more)
reports/09_fiche_quality/: mesure_fiche.json  mesure_fiche.md
reports/11_poc_photo/: poc_a_ter_demenagement.json  poc_a_vlm_extraction.json  poc_b_siglip_sample.json  poc_photo_bench.md  sample_demenagement.json
scripts/: mesure_qualite_fiche.py  smoke_e2e.sh
scripts/annotation_tool/: README.md  app.py  derive_meta.py  ingest_pdf.py  normalize_meta.py  sample_catalog.py
src/: config.py
src/api/: __init__.py  main.py  middleware.py  persistence.py  pipeline.py  schemas.py  uploads.py
src/auth/: __init__.py  jwt_utils.py  security.py  users.py
src/classifiers/: 01_tfidf_linsvc.py  02_knn.py  03_svm.py  04_rf.py  05_mlp.py  06_fusion_adaptive.py  07_bench_report.py  __init__.py  metrics.py
src/encoders/: 01_text_arctic.py  02_vision_siglip.py  03_build_indices.py  04_poc_siglip_sample.py  __init__.py  similarity_utils.py
src/explain/: 01_shap_tsne_modelcards.py  __init__.py
src/llm/: 01_prompt_templates.py  02_rag_grounded_writer.py  __init__.py  openrouter_client.py
src/mlops/: 01_mlflow_log_runs.py  __init__.py  mlflow_utils.py  promote_gate.py
src/monitoring/: __init__.py  drift_detection.py  push_metrics.py
src/observability/: __init__.py  logging.py
src/pricing/: 01_algorithmique.py  __init__.py
src/retrieval/: 01_faiss_indices.py  02_multiview_rrf.py  03_ood_guardrails.py  04_akinator_backend.py  05_taxonomy_bench.py  06_photo_richness_bench.py  07_listing_quality_bench.py  08_extractor_comparison.py  __init__.py  annotation_overlap.py  listing_quality_metrics.py  listing_quality_report.py  listing_quality_stats.py
src/serving/: README.md  __init__.py  expected_facets.json  import_model.py  listing_fill.py  service.py
src/vlm/: 01_zero_shot_validate.py  02_poc_photo_identification.py  __init__.py  extract_cache.py  photo_extraction.py  reasoned_identification.py  validator.py
tests/: conftest.py  test_airflow_dag.py  test_akinator_backend.py  test_annotation_overlap.py  test_anti_leakage.py  test_api_endpoints.py  test_api_persistence.py  test_api_schemas.py  test_audit_invariants.py  test_auth.py  test_candidate_images_validator.py  test_clean_invariants.py  test_describe_openrouter.py  test_docker_compose.py  test_docker_images.py  test_drift_check_dag.py  test_drift_detection.py  test_extract_cache.py  test_facets_from_title.py  test_facets_wiring.py  test_fine_vote.py  test_github_workflows.py  test_k8s_manifests.py  test_listing_fill.py  test_listing_quality_metrics.py  test_listing_quality_stats.py  test_llm_rag.py  test_llm_writer.py  test_mlflow_utils.py  test_observability_logging.py  test_ood_status_and_clamp.py  test_pandera_schemas.py  test_photo_upload.py  test_pipeline_services.py  test_pricing_cascade.py  test_promote_gate.py  test_push_metrics.py  test_reasoned_identification.py  test_retrieval_logic.py  test_seller_text_match.py  (+6 more)
(+22 files in other folders)
