[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rakuten-ai"
version = "0.1.0"
description = "Assistant IA pour vendeurs Rakuten - génération de fiches produit d'occasion via VLM multimodal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mathieu Klopp"},
]

# Dependencies minimales pour démarrer (s'enrichira phase par phase)
# Voir docs/PROJECT.md pour le scope complet et les phases.
dependencies = [
    "structlog>=24.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=3.5.0",
]

# Phase P02 - audit & cleaning
#
# Choix de stack pour le FULL audit (35 GB de JSONL sur 3 catégories Amazon Reviews 2023) :
#  - polars  : moteur d'audit principal (lazy / streaming, ~10-100× plus rapide
#              que pandas sur ces volumes, capable de tenir 200 M+ lignes hors RAM).
#  - pandas  : conservé pour le notebook compagnon et l'interop, pas pour les
#              opérations lourdes (qui passeraient en swap).
#  - hf_hub  : `hf_hub_download` pour télécharger les 6 .jsonl complets avec
#              gestion native du resume et du cache.
#  - requests: conservé pour debug / inspection rapide d'un fichier distant.
#
# NB: on n'utilise PAS `datasets.load_dataset` pour Amazon-Reviews-2023 car le repo
# embarque un loading script rejeté par datasets 3.x/4.x.
# Voir BRAIN/decisions.md D-004/D-005 + erreur_a_ne_plus_faire.md →
# datasets-4-loading-script-rejected.
data = [
    "polars>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

# Les extras [training], [api], [frontend] seront ajoutés au fil des phases.
# Voir BRAIN/to-do.md pour le plan d'enrichissement.

[tool.setuptools.packages.find]
where = ["src"]

# === Ruff config (linter + formatter) ===
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "build", "dist", "_archive*"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (gérée par formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

# === pytest config ===
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: tests longs (> 5 sec)",
    "gpu: tests qui requièrent un GPU",
    "integration: tests d'intégration end-to-end",
]
