[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rakuten-ai"
version = "0.1.0"
description = "Assistant IA pour vendeurs Rakuten - génération de fiches produit d'occasion via VLM multimodal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mathieu Klopp"},
]

# Dependencies minimales pour démarrer (s'enrichira phase par phase)
# Voir docs/PROJECT.md pour le scope complet et les phases.
dependencies = [
    "structlog>=24.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Planchers sécurité (audit pip-audit 2026-06-05) : versions minimales sans
    # CVE connue pour les deps transitives présentes dans toutes les images.
    "urllib3>=2.7.0",
    "idna>=3.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=3.5.0",
]

# Phase 2 - outil d'annotation/ingestion des photos d'eval (data prep, dev-time).
# Lit les PDF leboncoin scrappes (image-only) : rend les pages + recadre les photos.
annotation = [
    "pymupdf>=1.24.0",  # ouverture/rendu des PDF scrappes
    "pillow>=10.0.0",  # recadrage des photos extraites
]

# Phase P02 - audit & cleaning
#
# Choix de stack pour le FULL audit (35 GB de JSONL sur 3 catégories Amazon Reviews 2023) :
#  - polars  : moteur d'audit principal (lazy / streaming, ~10-100× plus rapide
#              que pandas sur ces volumes, capable de tenir 200 M+ lignes hors RAM).
#  - pandas  : conservé pour le notebook compagnon et l'interop, pas pour les
#              opérations lourdes (qui passeraient en swap).
#  - hf_hub  : `hf_hub_download` pour télécharger les 6 .jsonl complets avec
#              gestion native du resume et du cache.
#  - requests: conservé pour debug / inspection rapide d'un fichier distant.
#
# NB: on n'utilise PAS `datasets.load_dataset` pour Amazon-Reviews-2023 car le repo
# embarque un loading script rejeté par datasets 3.x/4.x.
# Voir ADR D-004/D-005 + erreur_a_ne_plus_faire.md →
# datasets-4-loading-script-rejected.
data = [
    "polars>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    # Validation déclarative des schemas (sous-todo 1.4 - invariants pipeline post-cleaning).
    # Pandera version polars-native pour cohérence avec le moteur d'audit (D-006).
    "pandera[polars]>=0.20.0",
]

# Phase P03-P05 - encodeurs (SigLIP/Arctic), FAISS, classifieurs sklearn.
# torch : CPU par défaut depuis PyPI (suffit pour serving + encode query unitaire).
# Pour l'encodage de masse sur GPU, installer torch CUDA séparément (index PyTorch).
ml = [
    "faiss-cpu>=1.8.0",
    "torch>=2.4.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.44.0",
    "scikit-learn>=1.8,<1.9",  # minor pin : evite le skew de version train/serving (pickle)
    "joblib>=1.4.0",
]

# Phase P10 - API serving (Cycle 9, runtime).
# polars + pyarrow : lecture parquet par `src/api/pipeline.py` au démarrage
# (chargement product_lookup + prix). Sans eux l'image API plante à l'import
# (cf. découverte au smoke test C13.1). Pas tout `[data]` (jupyter/matplotlib
# hors-scope serving).
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    # /metrics Prometheus (Cycle 14.2, D-030).
    "prometheus-fastapi-instrumentator>=7.0.0",
    # JWT auth stub démo (Cycle 15.1, D-032). HS256 signing + bcrypt password.
    # NB : pas de `passlib` car incompatible bcrypt>=5.0 (`__about__` API
    # removed) ; on utilise bcrypt direct, suffisant pour un stub démo.
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # OAuth2PasswordRequestForm (/auth/login form-data) exige python-multipart.
    # Présent transitivement dans le venv dev → l'absence dans l'image API n'a
    # été vue qu'au smoke C15.4 (container crash au boot). Toujours expliciter.
    "python-multipart>=0.0.9",
    # photo_extraction + validator (C17, D-035) appellent OpenRouter via requests.
    # 3ᵉ occurrence du pattern "dep transitive masquée" (polars C13.1,
    # python-multipart C15.4) - attrapée au smoke C17.4.
    "requests>=2.31.0",
]

# Phase P12-P13 - MLOps tracking + versioning (Cycles 11-12).
mlops = [
    "mlflow>=2.16.0",
    "dvc>=3.50.0",
]

# Phase P13 - observabilité / drift detection (Cycle 12.3, étendu C14).
# Evidently : drift detection sur features texte + catégories. CPU only.
# prometheus-client : push des drift scores au Pushgateway (D-031, C14.3).
monitoring = [
    "evidently>=0.4.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "prometheus-client>=0.20.0",
]

# Phase P13 - serving BentoML (Cycle 12.2) : sert le modèle @Production du Registry
# MLflow, métriques Prometheus natives (/metrics). CPU only.
serving = [
    "bentoml>=1.3.0",
    "scikit-learn>=1.8,<1.9",  # minor pin : evite le skew de version train/serving (pickle)
    "mlflow>=2.16.0",
]

# Phase P13 - boucle de ré-entraînement orchestrée (Cycle 12, image Airflow).
# Sous-ensemble CPU strict des deps train classifieurs (M2/M4/M5) + tracking :
# PAS de torch/transformers (encodage GPU = tâche amont isolée, cf. D-022).
# boto3 : requis côté CLIENT MLflow pour pousser des artifacts vers S3 (MinIO,
# D-027). Sans lui, log_artifact échoue à `import boto3` dans le scheduler Airflow.
train = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.8,<1.9",  # minor pin : evite le skew de version train/serving (pickle)
    "joblib>=1.4.0",
    "mlflow>=2.16.0",
    "boto3>=1.28.0",
    # promote_gate.py push sa décision vers Pushgateway (D-031, C14.3).
    "prometheus-client>=0.20.0",
]

# Extra [frontend] géré séparément via npm (cf. frontend/package.json).
# Voir le plan projet pour le plan d'enrichissement.

[tool.setuptools.packages.find]
where = ["src"]

# === Ruff config (linter + formatter) ===
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "build", "dist", "_archive*"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit - règles sécurité (Cycle 15.3, D-034)
]
ignore = [
    "E501",  # line too long (gérée par formatter)
]

[tool.ruff.lint.per-file-ignores]
# S101 : assert est LA primitive pytest ; S105/S106 : credentials stub dans les tests.
"tests/*" = ["B", "S101", "S105", "S106"]

# === pytest config ===
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: tests longs (> 5 sec)",
    "gpu: tests qui requièrent un GPU",
    "integration: tests d'intégration end-to-end",
]
